# tfg

./: README.md
docker/: .env  Dockerfile  docker-compose-gui-nvidia.yaml  docker-compose-gui.yaml  docker-compose.yaml  third_parties.sh
drone_pkg/: CMakeLists.txt  package.xml
drone_pkg/config/: navmap.params.yaml  rviz_config_easynav.rviz  world_config.yaml
drone_pkg/include/: create_map.hpp  drone_nav.hpp
drone_pkg/launch/: bonxai.launch.py  octomap.launch.py
drone_pkg/maps/: bonxai_map.pcd  bonxai_recopila.pcd  map.navmap  map.pcd  map_x500.pcd  new_bonxai.pcd  new_map.navmap  pose_graph.g2o  pose_graph_rotado.g2o  pose_graph_x500.g2o
drone_pkg/src/: create_map.cpp  drone_nav.cpp  mission_teleop.py
